<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="if_new_user_select_create">If new user, select Create</string>
    <string name="if_already_a_user_select_login">If already a user, select Login</string>
    <string name="login">Login</string>
    <string name="welcome_to_shoes_r_us">Welcome to Shoes R Us!!!</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="find_the_perfect_shoe">Find the perfect shoe</string>
    <string name="or_simply_browse_the_amazing_selections">or simply browse the amazing selections</string>
    <string name="next">Next</string>
    <string name="just_click_next_for_instructions">Just click Next for instructions</string>
    <string name="womenshoes">women shoes</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout">Logout</string>
    <string name="enter_name_here">Enter Name here</string>
    <string name="enter_shoe_description">Enter Shoe Description</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="company_name">Company Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="plus_sign">plus sign</string>
    <string name="instructions_on_how_to_select_shoes">Instructions on how to select shoes</string>
    <string name="_1_press_the_button_below_to_go_to_the_shoe_list_screen">1. Press the button below to go to the Shoe List Screen</string>
    <string name="_2_then_press_the_red_circular_button_to_add_a_shoe">2. Then press the red circular button to add a shoe</string>
    <string name="_3_then_press_save_or_cancel">3. Then press Save or Cancel</string>
    <string name="press_show_list_button_to_look_at_the_shoes">Press Show List button to look at the shoes</string>
    <string name="press_for_the_shoe_list">Press for the Shoe List</string>
</resources>
