<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.navigation.InstructionsFragment">

    <!--    Using Linearlayout was simpler to use than ConstraintLayout since-->
    <!--    there were only a few widgets in this layout.   the performance was not hindered-->
    <!--    by using Linearlayout-->
<!--    Also, the widgets in this layout were simple textViews and a button which were vertically -->
<!--    stacked anyway.-->
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffcc"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_on_how_to_select_shoes"
        android:textAlignment="center"
        android:textSize="@dimen/large_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/step1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_text"
        android:text="@string/_1_press_the_button_below_to_go_to_the_shoe_list_screen"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/step2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_text"
        android:text="@string/_2_then_press_the_red_circular_button_to_add_a_shoe"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/step2Text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_text"
        android:text="@string/_3_then_press_save_or_cancel"
        android:textSize="@dimen/small_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/buttonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/medium_text"
        android:text="@string/press_show_list_button_to_look_at_the_shoes"
        android:textStyle="bold" />

    <Button
        android:id="@+id/shoeListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center"
        android:text="@string/press_for_the_shoe_list" />

</LinearLayout>
</layout>