<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.navigation.LoginFragment">

<!--    This layout needed ConstraintLayout since the widgets were no longer-->
<!--    vertically stacked.   A layout that could handle a more complex arrangement-->
<!--    of the widgets was needed this time.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGreen"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

        <Button
            android:id="@+id/createNewUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUserLabel"
            app:layout_constraintVertical_bias="0.019" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_larg_margin"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/createNewUserButton"
            app:layout_constraintTop_toBottomOf="@+id/loginLabel"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:ems="10"
            android:hint="@string/enter_email_here"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:ems="10"
            android:hint="@string/enter_password_here"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

        <TextView
            android:id="@+id/newUserLabel"
            android:layout_width="@dimen/large_width"
            android:layout_height="@dimen/large_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/if_new_user_select_create"
            app:layout_constraintEnd_toStartOf="@+id/loginLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="123dp"
            android:layout_height="@dimen/medium_height"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitleText" />

        <TextView
            android:id="@+id/loginTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/welcome_to_shoes_r_us"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="123dp"
            android:layout_height="@dimen/medium_height"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/if_already_a_user_select_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newUserLabel"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>