<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.navigation.WelcomeFragment">


    <!--    This layout could have also been a vertical linearlayout but I wanted to get more-->
    <!--    experience using ConstraintLayout.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00ffcc">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/width260"
            android:layout_height="@dimen/height203"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin24"
            android:layout_marginEnd="@dimen/margin24"
            android:src="@drawable/women_shoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/welcomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/height48"
            android:layout_marginBottom="@dimen/margin60"
            android:gravity="center|center_horizontal"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcomeButtonLabel" />

        <!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintVertical_bias="0.902"-->
<!--            tools:ignore="ImageContrastCheck"-->


        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin29"
            android:text="@string/or_simply_browse_the_amazing_selections"
            android:textAlignment="center"
            android:textSize="@dimen/textSize16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/welcomeText1"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />

        <TextView
            android:id="@+id/welcomeButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin87"
            android:layout_marginBottom="@dimen/magin31"
            android:text="@string/just_click_next_for_instructions"
            android:textAlignment="center"
            android:textColor="#00695C"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/welcomeButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/welcomeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin313"
            android:text="@string/find_the_perfect_shoe"
            android:textAlignment="center"
            android:textSize="@dimen/large_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>